<resources>
    <string name="app_name">Tournaments</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button_label_submit">Submit</string>
    <string name="button_label_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="tournamentEdit_label_name">Tournament Name</string>
    <string name="tournamentEdit_label_league">League</string>
    <string name="tournamentEdit_label_knockOut">Knock out</string>
    <string name="tournamentEdit_label_singleMatch">Single Match</string>
    <string name="tournamentEdit_label_revenge">Revenge</string>
    <string name="tournamentEdit_title">Tournament Edit Screen</string>

    <string name="playerEdit_title">Player Edit Screen</string>
    <string name="playerEdit_label_name">Tournament Name</string>
    <string name="playerEdit_label_favoriteTeam">Favorite Team</string>
    <string name="not_selected">Not Selected</string>
</resources>
